RESOLVED FIXED71751
CSSPrimitiveValue: Fix up bitfield member types.
https://bugs.webkit.org/show_bug.cgi?id=71751
Summary CSSPrimitiveValue: Fix up bitfield member types.
Andreas Kling
Reported 2011-11-07 16:59:56 PST
A little cleanup seems to be in order here.
Attachments
Patcharoo (1.40 KB, patch)
2011-11-09 06:49 PST, Andreas Kling
koivisto: review+
Andreas Kling
Comment 1 2011-11-07 17:10:40 PST
Blergh, this would be trivial if it weren't for the ObjC bindings :)
Andreas Kling
Comment 2 2011-11-07 17:20:32 PST
Repurposing the bug to push some random CSSPrimitiveValue cleanups..
Andreas Kling
Comment 3 2011-11-09 06:49:13 PST
Created attachment 114264 [details] Patcharoo
Antti Koivisto
Comment 4 2011-11-09 06:52:06 PST
Comment on attachment 114264 [details] Patcharoo r=me
Andreas Kling
Comment 5 2011-11-09 07:17:48 PST
Note You need to log in before you can comment on or make changes to this bug.