CSSPrimitiveValue: Fix up bitfield member types. <http://webkit.org/b/71751>

Reviewed by Antti Koivisto.

The primitive unit type doesn't need to be a signed value,
and by making it unsigned, we can shave one bit off of it.
Furthermore, m_hasCachedCSSText and m_isQuirkValue should be
bool, not unsigned.

* css/CSSValue.h:


Canonical link: https://commits.webkit.org/88278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99711 268f45cc-cd09-0410-ab3c-d52691b4dbfc